k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudinary-next-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/affinity: "cookie"

spec:
  rules:
    - host: cloudinary-next.local 
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service 
                port:
                  number: 5000 
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service 
                port:
                  number: 80
